# company-agentic-rag-with-reflexion

./: README.md  example.env  ingestion.py  main.py  pyproject.toml  requirements.txt
graph/: agent_builder.py  consts.py  graph.py  state.py
graph/chains/: __init__.py  answer_grader.py  builder.py  generation.py  hallucination_grader.py  reflection_chains.py  retrieval_grader.py  router.py
graph/nodes/: generate.py  grade_documents.py  reflect.py  retrieve.py  tool_executor.py  web_search.py
